FIX: Prevent content jump on toggle

--- a/assets/stylesheets/checklist.scss
+++ b/assets/stylesheets/checklist.scss
@@ -47,13 +47,18 @@ span.chcklst-box {
   }
 }
 
-.fa-spin {
-  display: inline-block;
+.chcklst-spinner {
+  align-items: center;
+  display: inline-flex;
+  height: 25px;
   vertical-align: middle;
+}
+
+.fa-spin {
   margin-bottom: 0.25em;
   animation: fa-spin 2s infinite linear;
-  width: 14px;
-  height: 17px;
+  width: 15px;
+  height: 15px;
 }
 
 @keyframes fa-spin {
